SERVER-11216 Interrupted geoNear commands on mongos don't return an error code